--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -9,7 +9,7 @@
       <dd><%= @photo.caption %></dd>
 
       <dt>Image</dt>
-      <dd><%= @photo.image %></dd>
+      <dd><img src="<%= @photo.image %>" width = "750"></dd>
 
       <dt>User</dt>
       <dd><%= @photo.user_id %></dd>
