--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,9 @@
           <li><a href="/users">All Users</a></li>
           <li><a href="/my_likes">My Likes</a></li>
           <li><a href="/photos">Photos</a></li>
-          <li><a href="/users/">My Wall</a></li>
+          <% if current_user != nil %>
+          <li><a href="/users/<%=current_user.id%>">My Wall</a></li>
+          <% end %>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
