--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -26,15 +26,14 @@
 
 <body>
   <div class="page-header">
-    <h1>
-      Photos
-      <a href="/photos/new" class="btn btn-lg btn-success">New Photo</a>
-    </h1>
-  </div>
+    <a href="/photos/new" class="btn btn-lg btn-success"><i class="fa fa-plus" aria-hidden="true"></i></a>
+  </h1>
+</div>
 
-  <% @photos.each do |photo| %>
-  <div class="panel panel-default">
-    <div class="panel-heading"><%= photo.user.username %></div>
+<% @photos.each do |photo| %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <a href="/users/<%=photo.user_id%>"><%= photo.user.username %></a> <%=time_ago_in_words(Time.now)%> ago </div>
     <div class="panel-body">
       <table>
         <tr align="center"><img src="<%= photo.image %>" class="img-responsive" alt="Responsive image"></tr>
@@ -49,29 +48,33 @@
         <% end %>
         <td>
       -->
+
+      <p>
+        <form action="/create_like" method="post">
+          <!-- Hidden input for authenticity token to protect from forgery -->
+          <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+          <input type="hidden" name="photo_id" value="<%=photo.id%>">
+          <input type="hidden" name="user_id" value="<%=current_user.id%>">
+
+          <button name= "submit" class="btn btn-link">
+            <i class="fa fa-heart-o"></i> like this
+          </button>
+        </form>
+      </p>
+
     </table>
     <table>
       <tr><%= photo.caption %></tr>
       <tr><%=  %> </tr>
     </table>
 
-
-
-
-    <p>
-      <form action="/create_like" method="post">
-        <!-- Hidden input for authenticity token to protect from forgery -->
-        <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
-
-        <input type="hidden" name="photo_id" value="<%=photo.id%>">
-
-        <input type="hidden" name="user_id" value="<%=current_user.id%>">
-
-        <button class="btn btn-link">
-          <i class="fa fa-heart-o"></i>
-        </button>
-      </form>
-    </p>
+    <% photo.comments.each do |comment| %>
+    <table>
+      <tr><a href="/users/<%=comment.user_id%>"><%= comment.user.username %></a></tr>
+      <tr><%= comment.body %></tr>
+    </table>
+    <% end %>
 
     <p><div class="media">
       <div class="media-left">
@@ -88,8 +91,8 @@
       <input type="hidden" name="photo_id" value="<%=photo.id%>">
       <input type="text" id="body" name="body" placeholder="Add a comment..."class="form-control" required>
       <input type="hidden" name="user_id" value="<%=photo.user_id%>">
-
     </form>
+
 
 
   </div>
