--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,11 +50,11 @@
 
         <ul class="nav navbar-nav navbar-right">
           <% if current_user != nil %>
-          <li><a href="/users/edit"> <%= current_user.username %> </a></li>
-          <li><a href="/users/sign_out" data-method="delete" rel="nofollow">Sign Out</a></li>
+          <li><a href="/users/edit"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> <%= current_user.username %> </a></li>
+          <li><a href="/users/sign_out" data-method="delete" rel="nofollow"><i class="fa fa-sign-out" aria-hidden="true"></i>Sign Out</a></li>
           <% elsif %>
-          <li><a href="/users/sign_in"> Sign In </a></li>
-          <li><a href="/users/sign_up"> Sign Up </a></li>
+          <li><a href="/users/sign_in"><i class="fa fa-sign-out"></i> Sign In </a></li>
+          <li><a href="/users/sign_up"><i class="fa fa-user-circle-o" aria-hidden="true"></i>Sign Up </a></li>
           <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
