--- a/app/views/likes/mylikes.html.erb
+++ b/app/views/likes/mylikes.html.erb
@@ -2,13 +2,73 @@
   <h3> My Likes</h3>
 </div>
 
-<% Like.where(:user_id=>current_user).each do |like| %>
-<% Photo.find(like.photo_id) do |photo|%>
-<table>
-  <tr>
-    <img src="<%= photo.image %>">
-  </tr>
-</table>
+<% current_user.liked_photos.each do |photo| %>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <a href="/users/<%=photo.user_id%>"><%= photo.user.username %></a> <%=time_ago_in_words(Time.now)%> ago </div>
+    <div class="panel-body">
+      <table>
+        <tr align="center"><img src="<%= photo.image %>" class="img-responsive" alt="Responsive image"></tr>
 
+        <!--<td><%= photo.user_id %></td> -->
+        <!--
+        <td>
+        <a href="/photos/<%= photo.id %>" class="btn btn-primary">Show</a>
+        <% if current_user.id == photo.user_id  %>
+        <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">Edit</a>
+        <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+        <% end %>
+        <td>
+      -->
+
+      <p>
+        <form action="/create_like" method="post">
+          <!-- Hidden input for authenticity token to protect from forgery -->
+          <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+          <input type="hidden" name="photo_id" value="<%=photo.id%>">
+          <input type="hidden" name="user_id" value="<%=current_user.id%>">
+
+          <button name= "submit" class="btn btn-link">
+            <i class="fa fa-heart-o"></i> like this
+          </button>
+        </form>
+      </p>
+
+    </table>
+    <table>
+      <tr><%= photo.caption %></tr>
+      <tr><%=  %> </tr>
+    </table>
+
+    <% photo.comments.each do |comment| %>
+    <table>
+      <tr><a href="/users/<%=comment.user_id%>"><%= comment.user.username %></a></tr>
+      <tr><%= comment.body %></tr>
+    </table>
+    <% end %>
+
+    <p><div class="media">
+      <div class="media-left">
+      </div>
+      <div class="media-body">
+        ...
+      </div>
+    </div></p>
+
+    <form action="/create_comment" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+      <!-- Label and input for caption -->
+      <input type="hidden" name="photo_id" value="<%=photo.id%>">
+      <input type="text" id="body" name="body" placeholder="Add a comment..."class="form-control" required>
+      <input type="hidden" name="user_id" value="<%=photo.user_id%>">
+    </form>
+
+
+
+  </div>
+</div>
 <% end %>
-<%end %>
+
+<!-- <%#end %> -->
