--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -20,6 +20,14 @@
       <a href="/photos" class="btn btn-primary">
         Back
       </a>
+
+      <!--
+      <a href="/photos/<%= @photo.id %>" class="btn btn-primary">Show</a>
+      <% if current_user.id == @photo.user_id  %>
+      <a href="/photos/<%= photo.id %>/edit" class="btn btn-warning">Edit</a>
+      <a href="/delete_photo/<%= photo.id %>" class="btn btn-danger" rel="nofollow">Delete</a>
+      <% end %>
+    -->
       <a href="/photos/<%= @photo.id %>/edit" class="btn btn-warning">
         Edit
       </a>
